# NYCU_SDC

Homework2/: HW2-1.py  HW2-1_simple.py  HW2-2.py
Homework3/: Readme.md  Report.md
Homework4/: Report.md
Homework5/: Report.md
MidCompetition/: Report.md  submit_3.csv
SDC_ws/src/localization/: CMakeLists.txt  Note.md
SDC_ws/src/localization/config/: check_path.rviz  itri.rviz  nuscenes.rviz  nuscenes_2.rviz
SDC_ws/src/localization/launch/: itri.launch  itri_rviz.launch  msg_path.launch  nuscenes_icp2.launch  nuscenes_icp3.launch
SDC_ws/src/localization/results/: results_1.csv
SDC_ws/src/localization/results/Result_1/: 1107_newMethod.csv  1107_pass_voxel.csv  test.csv
SDC_ws/src/localization/results/Result_1/cliper/: results_1106_0.csv
SDC_ws/src/localization/results/Result_1/passthrough/: results_1106_pass2.csv  results_1106_passthrough.csv  results_1106_test.csv
SDC_ws/src/localization/results/Result_1/voxelgrid/: 1106_leaf0.5_newfunction.csv  results_1104.csv  results_1106_leaf0.3.csv  results_1106_leaf005.csv
SDC_ws/src/localization/results/Result_2/: 1113_0.10295.csv  1113_0.10985_filter.csv  imu_1113.csv  test.csv
SDC_ws/src/localization/results/Result_3/: 0.18002_icp3_odom_1123.csv  0.20653_icp3_odomModify_1120.csv  FakeKF_1116.csv  FakeKF_1117.csv  FakeKF_2_1117_0.68.csv  FakeKF_3_1118_0.23768.csv  FakeKF_odom_IMU_1118_0.7.csv  FakeKF_odomgpsICP_1118.csv  gpsKF_1113.csv  gps_1113_0.55.csv  icp3_KF_1120.csv  icp3_odomModify2_1120.csv  icp3_odom_1123.csv  odomImu_1113.csv  test_1113.csv
SDC_ws/src/localization/src/: CheckMsgPath.cpp  localizer_ICP_new.cpp  localizer_icp_1.cpp  localizer_icp_1_base.cpp  localizer_icp_2.cpp  localizer_icp_2_imu.cpp  localizer_icp_2_odomM.cpp  localizer_icp_2_old.cpp  localizer_icp_3.cpp  localizer_icp_3_FakeKF.cpp  localizer_icp_3_GPS.cpp  localizer_icp_3_odom.cpp  localizer_node.cpp  localizer_node_EKF.cpp  localizer_node_base.cpp
(+89 files in other folders)
